<resources>
    <string name="app_name">OTB</string>
    <string name="android_head">Android Head</string>
    <string name="easy">Easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="initial_easy_puzzle_counter">0/3</string>
    <string name="initial_medium_puzzle_counter">0/4</string>
    <string name="initial_hard_puzzle_counter">0/2</string>
    <string name="hint">Hint</string>
    <string name="objective_for_hint">Objective for hint.</string>
    <string name="hint_for_all_objectives">Hints for this set of objectives.</string>
    <string name="hint_for_a_objective">Hints for just this objective.</string>

    <string-array name="EasyPuzzle1HintsAllObjectives">
        <item>Brightness</item>
    </string-array>
    <string-array name="EasyPuzzle1HintsObjective1">
        <item>\uA71B</item>
    </string-array>
    <string-array name="EasyPuzzle1HintsObjective2">
        <item>\u2193</item>
    </string-array>

    <string-array name="EasyPuzzle2HintsAllObjectives">
        <item>Light</item>
    </string-array>
    <string-array name="EasyPuzzle2HintsObjective1">
        <item>I can\'t see!</item>
    </string-array>
    <string-array name="EasyPuzzle2HintsObjective2">
        <item>Ahh my eyes!</item>
    </string-array>

    <string-array name="EasyPuzzle3HintsAllObjectives">
        <item>Battery</item>
    </string-array>
    <string-array name="EasyPuzzle3HintsObjective1">
        <item>Plug me in!</item>
    </string-array>

    <string-array name="Puzzle2HintsAllObjectives">
        <item>Where Are Things Stored</item>
    </string-array>
    <string-array name="Puzzle2HintsObjective1">
        <item>You Must Go Back</item>
    </string-array>


    <string-array name="Puzzle1MediumAllObjectives">
        <item>The Camera is your best friend</item>
    </string-array>
    <string-array name="Puzzle1MediumObjective1">
        <item>We like Codes</item>
    </string-array>
    <string-array name="Puzzle2MediumAllObjectives">
        <item>Start looking for fruit!</item>
    </string-array>
    <string-array name="Puzzle2MediumObjective2">
        <item>Take a picture of an apple.</item>
    </string-array>
    <string-array name="Puzzle2MediumObjective3">
        <item>Take a picture of a banana. </item>
    </string-array>
    <string-array name="Puzzle2MediumObjective4">
        <item>Take a picture of an orange.</item>
    </string-array>


    <string name="select">Select</string>
    <string name="Brightness_Easy_Puzzle_Objective_Counter">0/3</string>
    <string name="File_Easy_Puzzle_Objective_Counter">0/2</string>
    <string name="easy_difficulty">Easy Difficulty </string>
    <string name="medium_difficulty">Medium Difficulty</string>
    <string name="hard_difficulty">Hard Difficulty</string>
    <string name="reset_title">Reset Game Data</string>
    <string name="reset_button">Reset</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="game_summary">OTB (Outside the Box) is a puzzle game that uses your phone\'s features as solutions for puzzles. Get creative and discover the answers with subtle visual clues and hints to help with your play through.</string>
    <string name="help_navigate_title">How to Navigate the Game:</string>
    <string name="help_navigate_content_1">There are 3 different levels for puzzles and each puzzle has one or more objectives to solve. All puzzles are color-coded, so each objective has a color that corresponds to its puzzle. Click on an objective to start a puzzle.</string>
    <string name="help_navigate_content_2">If you are stuck during a puzzle, click on an objective to get hints for the puzzle and the specific objective.</string>
    <string name="reset">Reset</string>
    <string name="startClock">Start Timer</string>
</resources>